[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/buildings/building.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/buildings/repair_station/repair_station.gd" type="Script" id=2]
[ext_resource path="res://src/buildings/repair_station/repair_station.png" type="Texture" id=3]
[ext_resource path="res://src/buildings/repair_station/repair_station.tres" type="Resource" id=4]
[ext_resource path="res://assets/fonts/equipment_16.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 79.0063

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in_ui"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RepairStation" instance=ExtResource( 1 )]
script = ExtResource( 2 )
info = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="." index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -19.0
margin_top = -71.0
margin_right = 21.0
margin_bottom = -31.0
mouse_filter = 1

[node name="Button" type="Button" parent="Control" index="0"]
margin_top = 3.0
margin_right = 41.0
margin_bottom = 23.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Heal"

[node name="Area2D" type="Area2D" parent="." index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
visible = false
position = Vector2( -1, -10 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 4 )
anims/fade_in_ui = SubResource( 3 )

[connection signal="button_up" from="Control/Button" to="." method="_on_Button_button_up"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
